--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=backend
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.jpa.show-sql: true
+
+spring.profiles.active=dev
