Add company filter

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
+	implementation 'me.xdrop:fuzzywuzzy:1.4.0'
 }
 
 tasks.named('test') {
